@@ -1,0 +1,36 @@
+<?xml version="1.0" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     https://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<schema name="schema-with-dependency-on-mypkg" version="1.1">
+
+  <uniqueKey>id</uniqueKey>
+
+  <fieldType name="int" class="solr.IntPointField" docValues="false"/>
+  <fieldType name="long" class="solr.LongPointField" docValues="false"/>
+  <fieldType name="string" class="solr.StrField"/>
+
+  <fieldType name="my_text_field" class="mypkg:my.pkg.MyTextField">
+    <analyzer>
+      <tokenizer name="whitespace"/>
+    </analyzer>
+  </fieldType>
+
+  <field name="id" type="string" indexed="true" stored="true"/>
+  <field name="_version_" type="long" indexed="true" stored="true"/>
+
+</schema>
